# sai-advance

./: CMakeLists.txt  README.md
centec/: CMakeLists.txt  Makefile
centec/cli/inc/: ctc_sai_data_ser.h  ctc_sai_data_utils.h  ctc_sai_meta_cli.h  ctc_sai_meta_db.h
centec/cli/script/: api.awk  attr.awk  enum.awk  object.awk  parser.sh  status.awk
centec/cli/src/: ctc_sai_data_ser.c  ctc_sai_data_utils.c  ctc_sai_meta_cli.c  ctc_sai_meta_db.c
centec/inc/: ctc_redis_client.h  ctc_sai.h  ctc_sai_acl.h  ctc_sai_app_cfg.h  ctc_sai_app_cfg_chip_profile.h  ctc_sai_app_cfg_datapath_profile.h  ctc_sai_app_cfg_ftm_profile.h  ctc_sai_app_cfg_parse.h  ctc_sai_app_cfg_resrc_profile.h  ctc_sai_app_json.h  ctc_sai_bfd.h  ctc_sai_bridge.h  ctc_sai_buffer.h  ctc_sai_counter.h  ctc_sai_db.h  ctc_sai_debug_counter.h  ctc_sai_dtel.h  ctc_sai_es.h  ctc_sai_fdb.h  ctc_sai_hostif.h  ctc_sai_isolation_group.h  ctc_sai_lag.h  ctc_sai_ld_hash.h  ctc_sai_mcast.h  ctc_sai_mirror.h  ctc_sai_monitor.h  ctc_sai_mpls.h  ctc_sai_nat.h  ctc_sai_neighbor.h  ctc_sai_next_hop.h  ctc_sai_next_hop_group.h  ctc_sai_npm.h  ctc_sai_oid.h  ctc_sai_policer.h  ctc_sai_port.h  ctc_sai_ptp.h  ctc_sai_qosmap.h  ctc_sai_queue.h  ctc_sai_route.h  ctc_sai_router_interface.h  (+17 more)
centec/platform/driver/fiber_handle/: fiber_handle.c  fiber_handle.h
centec/platform/driver/i2c_handle/: i2c_cpm.c  i2c_cpm.h  i2c_handle.c  i2c_handle.h
centec/platform/driver/macled_handle/: macled_handle.c  macled_handle.h
centec/platform/inc/: platform_debug.h
centec/platform/mgt/: ctc_board_e530_24x2c.c  ctc_board_e530_48s4x.c  ctc_board_e530_48t4x_p.c  ctc_board_e550_24t16y.c  ctc_board_types.h  ctc_sai_platform.c  ctc_sai_platform.c.orig  ctc_sai_platform.h
centec/src/: ctc_redis_client.c  ctc_sai.c  ctc_sai_acl.c  ctc_sai_app_cfg.c  ctc_sai_app_cfg_chip_profile.c  ctc_sai_app_cfg_datapath_profile.c  ctc_sai_app_cfg_ftm_profile.c  ctc_sai_app_cfg_parse.c  ctc_sai_app_json.c  ctc_sai_app_parser_init_cfg.c  ctc_sai_bfd.c  ctc_sai_bridge.c  ctc_sai_buffer.c  ctc_sai_counter.c  ctc_sai_db.c  ctc_sai_debug_counter.c  ctc_sai_es.c  ctc_sai_fdb.c  ctc_sai_hostif.c  ctc_sai_isolation_group.c  ctc_sai_lag.c  ctc_sai_ld_hash.c  ctc_sai_mcast.c  ctc_sai_mirror.c  ctc_sai_monitor.c  ctc_sai_mpls.c  ctc_sai_nat.c  ctc_sai_neighbor.c  ctc_sai_next_hop.c  ctc_sai_next_hop_group.c  ctc_sai_npm.c  ctc_sai_oid.c  ctc_sai_policer.c  ctc_sai_port.c  ctc_sai_ptp.c  ctc_sai_qosmap.c  ctc_sai_queue.c  ctc_sai_route.c  ctc_sai_router_interface.c  ctc_sai_samplepacket.c  (+15 more)
inc/: sai.h  saiacl.h  saibfd.h  saibridge.h  saies.h  saihash.h  saihostif.h  sailag.h  saimonitor.h  saimpls.h  sainat.h  sainexthop.h  sainexthopgroup.h  sainpm.h  saipolicer.h  saiport.h  saiptp.h  saiqueue.h  sairouterinterface.h  saischedulergroup.h  saiswitch.h  saisynce.h  saitunnel.h  saitwamp.h  saitypes.h  saiudf.h  saivlan.h  saiy1731.h
test/neo_saithrift/: Makefile  chip_profile.cfg_tm  chip_profile.cfg_tmmx  portmap.ini  portmap_tmmx.ini  profile_tm.ini  profile_tmmx.ini  pswitchd  regression.sh  topo-1dut.txt
test/neo_saithrift/gen-cpp/: switch_sai_constants.cpp  switch_sai_constants.h  switch_sai_rpc.cpp  switch_sai_rpc.h  switch_sai_rpc_server.skeleton.cpp  switch_sai_types.cpp  switch_sai_types.h
test/neo_saithrift/gen-py/switch_sai/: sai_headers.py  switch_sai_rpc-remote  switch_sai_rpc.py  ttypes.py
test/neo_saithrift/mycode/: server.cpp  switch_sai.thrift
test/neo_saithrift/testcase/: README.md  ctc_sai_acl.py  ctc_sai_aps.py  ctc_sai_bfd.py  ctc_sai_bridge.py  ctc_sai_buffer.py  ctc_sai_counter.py  ctc_sai_debug_counter.py  ctc_sai_fdb.py  ctc_sai_hash.py  ctc_sai_hostif.py  ctc_sai_int.py  ctc_sai_ipmc.py  ctc_sai_l2mc.py  ctc_sai_lag.py  ctc_sai_mirror.py  ctc_sai_monitor.py  ctc_sai_mpls.py  ctc_sai_neighbor.py  ctc_sai_nexthop.py  ctc_sai_nexthop_group.py  ctc_sai_npm.py  ctc_sai_oam_aps.py  ctc_sai_policer.py  ctc_sai_port.py  ctc_sai_ptp.py  ctc_sai_qos_map.py  ctc_sai_queue.py  ctc_sai_route.py  ctc_sai_router_interface.py  ctc_sai_scheduler.py  ctc_sai_scheduler_group.py  ctc_sai_scheduler_group_tm2.py  ctc_sai_stp.py  ctc_sai_switch.py  ctc_sai_synce.py  ctc_sai_twamp.py  ctc_sai_udf.py  ctc_sai_virtual_router.py  ctc_sai_vlan.py  (+21 more)
