PROJECT (SAIPROJECT)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_BUILD_BOARD "x86")

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -Werror -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
#SET(CMAKE_C_FLAGS "$ENV{CFLAGS} -m32")
#SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -m32")

SET(ARCH "uml")

SET(CHIPNAME "tsingma")
SET(SDKHOME "../sdk")
SET(CONFIG_DBCLIENT 0)

SET(CONFIG_PLATFORM "other")

#board
ADD_DEFINITIONS(-DSDK_WORK_PLATFORM=0)
ADD_DEFINITIONS(-DSDK_WORK_ENV=1)

ADD_DEFINITIONS(-DSDK_IN_USERMODE)

#now only support tsingma
IF(${CHIPNAME} STREQUAL "tsingma")
    ADD_DEFINITIONS(-DTSINGMA)
ENDIF(${CHIPNAME} STREQUAL "tsingma")

IF(CONFIG_DBCLIENT)
    SET(REDIS_INCLUDE_DIR "/data01/users/systest/shanz/sdk/cmodelsai/cmodel_sai_trunk/sai/db/redis/deps/hiredis")
    ADD_DEFINITIONS(-DCONFIG_DBCLIENT)
ENDIF(CONFIG_DBCLIENT)

IF(${CONFIG_PLATFORM} STREQUAL "ctc")
    ADD_DEFINITIONS(-DCTC_PLATFORM)
ENDIF(${CONFIG_PLATFORM} STREQUAL "ctc")

ADD_DEFINITIONS(-m64)
ADD_DEFINITIONS(-Wall)
ADD_DEFINITIONS(-fPIC -Wno-long-long -Wformat -m64)


ADD_SUBDIRECTORY(centec)

MESSAGE(STATUS "This is BINARY dir "${SAIPROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir "${SAIPROJECT_SOURCE_DIR})
MESSAGE(STATUS "This is BOARD type "${CMAKE_BUILD_BOARD})

